# flink-mcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/ff2025/: __main__.py  flink_mcp_server.py  main.py
src/flink_mcp/: flink_mcp_server.py  flink_sql_gateway_client.py
tests/: conftest.py  test_flink_sql_gateway_client.py  test_mcp_integration.py  test_stream_workflow_integration.py
tests/mcp/: test_mcp_server_mocked.py
