[project]
name = "ff2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
ff2025 = "ff2025.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ff2025*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit a live Flink SQL Gateway (set SQL_GATEWAY_API_BASE_URL)",
]
